--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
     "sourceType": "module"
   },
   "rules": {
+    "import/extensions": "off" ,
     "import/no-extraneous-dependencies": [
       "error",
       {
