--- a/package.json
+++ b/package.json
@@ -30,15 +30,15 @@
     "eslint": "^8.11.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
-    "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
-    "webpack": "^5.76.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4",
-    "webpack-merge": "^5.8.0"
+    "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "html-webpack-plugin": "^5.5.1",
     "jquery": "^3.6.0",
-    "regenerator-runtime": "^0.13.9"
+    "regenerator-runtime": "^0.13.9",
+    "webpack": "^5.82.1",
+    "webpack-merge": "^5.8.0"
   }
 }
